--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <script src="day3.js"></script>
+    <h1>h11</h1>
+    <h1>h12</h1>
+    <p id="para">para</p>
+    <p class="class">class1</p>
+    <h2 class="class">class2</h2>
+    <script src="dom.js"></script>
 </body>
 </html>
