--- a/dom.html
+++ b/dom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dom.css">
 </head>
 
 <body>
@@ -13,6 +13,7 @@
     <p id="para">para</p>
     <p class="class">class1</p>
     <h2 class="class">class2</h2>
+    <div class="body"></div>
     <script src="dom.js"></script>
 </body>
 </html>
